--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.host.url=http://157.253.238.75:8080/sonar-isis2603/
-sonar.projectKey=ISIS3710_202420_S1_E1_Back:sonar
-sonar.projectName=ISIS3710_202420_S1_E1_Back
+sonar.host.url=http://157.253.238.75:8080/sonar-misovirtual/
+sonar.projectKey=MISW4403_202414_E01:sonar
+sonar.projectName=MISW4403_202414_E01
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.test=src
