--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@nestjs/apollo": "^12.2.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "apollo-server-express": "^3.13.0",
     "cache-manager": "^5.7.6",
     "cache-manager-sqlite": "^0.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "graphql": "^16.9.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
